<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sloganConstraint"
        android:layout_width="392dp"
        android:layout_height="132dp"
        android:background="@color/green_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textSloganText"
            android:layout_width="137dp"
            android:layout_height="37dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="28dp"
            android:text="@string/text_slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSloganAuthors"
            android:layout_width="131dp"
            android:layout_height="24dp"
            android:text="@string/text_slogan_authors"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textSloganText"
            app:layout_constraintStart_toStartOf="@+id/textSloganText"
            app:layout_constraintTop_toBottomOf="@+id/textSloganText" />

        <ImageView
            android:id="@+id/logoImageHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/todo"
            android:rotation="-90"
            android:rotationY="-180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/key_in_paper"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/credentialHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/credential_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sloganConstraint" />

    <TextView
        android:id="@+id/loginField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/loginEditText"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentialHeader" />

    <TextView
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/password_field"
        app:layout_constraintStart_toStartOf="@+id/loginField"
        app:layout_constraintTop_toBottomOf="@+id/loginEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/loginEditText" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_field"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginField"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/saveCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_login_message"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/enter_button_purple"
        android:backgroundTint="@color/enter_button_purple"
        android:contentDescription="@string/enter_button"
        android:onClick="entrarClicado"
        android:text="@string/enter_button"
        android:textColor="@color/green_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveCredentials" />

</androidx.constraintlayout.widget.ConstraintLayout>